@@ -63,6 +63,20 @@ configure(runtimeProjects) {
             mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
         }
     }
+
+    dependencies {
+        implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
+    }
+
+    tasks.named('bootRun') {
+        jvmArgs = [
+            '-XX:+UseContainerSupport',
+            '-XX:MaxRAMPercentage=75.0',
+            '-Xms256m',
+            '-Xmx512m',
+            '-Xlog:gc*:stdout:time,level,tags',
+        ]
+    }
 }
 
 //dependencies {
